--- a/test_code.ipynb
+++ b/test_code.ipynb
@@ -8173,7 +8173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8198,7 +8198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8211,7 +8211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -8231,6 +8231,7 @@
        },
        "data": [
         {
+         "base": 0,
          "hovertemplate": "%{y}<extra></extra>",
          "legendgroup": "SIB",
          "legendgrouptitle": {
@@ -8244,10 +8245,8 @@
           }
          },
          "name": "Duration: 0",
-         "offset": -1000000000,
          "offsetgroup": "0",
          "type": "bar",
-         "width": 100000000,
          "x": [
           0,
           1,
@@ -8278,6 +8277,20 @@
          ]
         },
         {
+         "base": [
+          0,
+          0,
+          0,
+          1,
+          0,
+          0,
+          0,
+          0,
+          0,
+          0,
+          1,
+          0
+         ],
          "hovertemplate": "%{y}<extra></extra>",
          "legendgroup": "SIB",
          "legendgrouptitle": {
@@ -8291,10 +8304,8 @@
           }
          },
          "name": "Duration: 11-15",
-         "offset": -1000000000,
          "offsetgroup": "0",
          "type": "bar",
-         "width": 100000000,
          "x": [
           0,
           1,
@@ -8325,6 +8336,20 @@
          ]
         },
         {
+         "base": [
+          0,
+          0,
+          1,
+          3,
+          0,
+          2,
+          1,
+          0,
+          0,
+          0,
+          2,
+          0
+         ],
          "hovertemplate": "%{y}<extra></extra>",
          "legendgroup": "SIB",
          "legendgrouptitle": {
@@ -8338,10 +8363,8 @@
           }
          },
          "name": "Duration: 16-20",
-         "offset": -1000000000,
          "offsetgroup": "0",
          "type": "bar",
-         "width": 100000000,
          "x": [
           0,
           1,
@@ -8372,6 +8395,20 @@
          ]
         },
         {
+         "base": [
+          0,
+          0,
+          2,
+          4,
+          0,
+          3,
+          2,
+          1,
+          0,
+          1,
+          4,
+          1
+         ],
          "hovertemplate": "%{y}<extra></extra>",
          "legendgroup": "SIB",
          "legendgrouptitle": {
@@ -8385,10 +8422,8 @@
           }
          },
          "name": "Duration: 20+",
-         "offset": -1000000000,
          "offsetgroup": "0",
          "type": "bar",
-         "width": 100000000,
          "x": [
           0,
           1,
@@ -8419,6 +8454,20 @@
          ]
         },
         {
+         "base": [
+          0,
+          0,
+          4,
+          6,
+          1,
+          3,
+          3,
+          2,
+          0,
+          1,
+          4,
+          1
+         ],
          "hovertemplate": "%{y}<extra></extra>",
          "legendgroup": "SIB",
          "legendgrouptitle": {
@@ -8432,10 +8481,8 @@
           }
          },
          "name": "Duration: 6-10",
-         "offset": -1000000000,
          "offsetgroup": "0",
          "type": "bar",
-         "width": 100000000,
          "x": [
           0,
           1,
@@ -8466,6 +8513,20 @@
          ]
         },
         {
+         "base": [
+          2,
+          2,
+          6,
+          11,
+          3,
+          5,
+          6,
+          5,
+          0,
+          1,
+          7,
+          3
+         ],
          "hovertemplate": "%{y}<extra></extra>",
          "legendgroup": "SIB",
          "legendgrouptitle": {
@@ -8479,10 +8540,8 @@
           }
          },
          "name": "Duration: <5",
-         "offset": -1000000000,
          "offsetgroup": "0",
          "type": "bar",
-         "width": 100000000,
          "x": [
           0,
           1,
@@ -8513,6 +8572,7 @@
          ]
         },
         {
+         "base": 0,
          "hovertemplate": "%{y}<extra></extra>",
          "legendgroup": "Aggression",
          "legendgrouptitle": {
@@ -8526,10 +8586,8 @@
           }
          },
          "name": "Duration: 0",
-         "offset": 0,
          "offsetgroup": "1",
          "type": "bar",
-         "width": 100000000,
          "x": [
           0,
           1,
@@ -8560,6 +8618,20 @@
          ]
         },
         {
+         "base": [
+          0,
+          0,
+          2,
+          1,
+          0,
+          0,
+          0,
+          0,
+          0,
+          0,
+          0,
+          0
+         ],
          "hovertemplate": "%{y}<extra></extra>",
          "legendgroup": "Aggression",
          "legendgrouptitle": {
@@ -8573,10 +8645,8 @@
           }
          },
          "name": "Duration: 11-15",
-         "offset": 0,
          "offsetgroup": "1",
          "type": "bar",
-         "width": 100000000,
          "x": [
           0,
           1,
@@ -8607,6 +8677,20 @@
          ]
         },
         {
+         "base": [
+          1,
+          6,
+          5,
+          10,
+          4,
+          1,
+          7,
+          2,
+          1,
+          0,
+          3,
+          1
+         ],
          "hovertemplate": "%{y}<extra></extra>",
          "legendgroup": "Aggression",
          "legendgrouptitle": {
@@ -8620,10 +8704,8 @@
           }
          },
          "name": "Duration: 16-20",
-         "offset": 0,
          "offsetgroup": "1",
          "type": "bar",
-         "width": 100000000,
          "x": [
           0,
           1,
@@ -8654,6 +8736,20 @@
          ]
         },
         {
+         "base": [
+          1,
+          7,
+          9,
+          12,
+          6,
+          4,
+          9,
+          4,
+          1,
+          1,
+          4,
+          2
+         ],
          "hovertemplate": "%{y}<extra></extra>",
          "legendgroup": "Aggression",
          "legendgrouptitle": {
@@ -8667,10 +8763,8 @@
           }
          },
          "name": "Duration: 20+",
-         "offset": 0,
          "offsetgroup": "1",
          "type": "bar",
-         "width": 100000000,
          "x": [
           0,
           1,
@@ -8701,6 +8795,20 @@
          ]
         },
         {
+         "base": [
+          1,
+          7,
+          18,
+          23,
+          9,
+          7,
+          11,
+          10,
+          3,
+          1,
+          8,
+          2
+         ],
          "hovertemplate": "%{y}<extra></extra>",
          "legendgroup": "Aggression",
          "legendgrouptitle": {
@@ -8714,10 +8822,8 @@
           }
          },
          "name": "Duration: 6-10",
-         "offset": 0,
          "offsetgroup": "1",
          "type": "bar",
-         "width": 100000000,
          "x": [
           0,
           1,
@@ -8748,6 +8854,20 @@
          ]
         },
         {
+         "base": [
+          7,
+          11,
+          31,
+          34,
+          19,
+          10,
+          19,
+          20,
+          3,
+          9,
+          18,
+          12
+         ],
          "hovertemplate": "%{y}<extra></extra>",
          "legendgroup": "Aggression",
          "legendgrouptitle": {
@@ -8761,10 +8881,8 @@
           }
          },
          "name": "Duration: <5",
-         "offset": 0,
          "offsetgroup": "1",
          "type": "bar",
-         "width": 100000000,
          "x": [
           0,
           1,
@@ -8795,6 +8913,7 @@
          ]
         },
         {
+         "base": 0,
          "hovertemplate": "%{y}<extra></extra>",
          "legendgroup": "Disruptive",
          "legendgrouptitle": {
@@ -8808,10 +8927,8 @@
           }
          },
          "name": "Duration: 0",
-         "offset": 1000000000,
          "offsetgroup": "2",
          "type": "bar",
-         "width": 100000000,
          "x": [
           0,
           1,
@@ -8842,6 +8959,20 @@
          ]
         },
         {
+         "base": [
+          0,
+          0,
+          0,
+          0,
+          2,
+          0,
+          0,
+          0,
+          1,
+          0,
+          0,
+          0
+         ],
          "hovertemplate": "%{y}<extra></extra>",
          "legendgroup": "Disruptive",
          "legendgrouptitle": {
@@ -8855,10 +8986,8 @@
           }
          },
          "name": "Duration: 11-15",
-         "offset": 1000000000,
          "offsetgroup": "2",
          "type": "bar",
-         "width": 100000000,
          "x": [
           0,
           1,
@@ -8889,6 +9018,20 @@
          ]
         },
         {
+         "base": [
+          0,
+          0,
+          3,
+          3,
+          3,
+          1,
+          2,
+          0,
+          1,
+          0,
+          0,
+          0
+         ],
          "hovertemplate": "%{y}<extra></extra>",
          "legendgroup": "Disruptive",
          "legendgrouptitle": {
@@ -8902,10 +9045,8 @@
           }
          },
          "name": "Duration: 16-20",
-         "offset": 1000000000,
          "offsetgroup": "2",
          "type": "bar",
-         "width": 100000000,
          "x": [
           0,
           1,
@@ -8936,6 +9077,20 @@
          ]
         },
         {
+         "base": [
+          0,
+          0,
+          3,
+          5,
+          3,
+          3,
+          2,
+          0,
+          1,
+          0,
+          0,
+          0
+         ],
          "hovertemplate": "%{y}<extra></extra>",
          "legendgroup": "Disruptive",
          "legendgrouptitle": {
@@ -8949,10 +9104,8 @@
           }
          },
          "name": "Duration: 20+",
-         "offset": 1000000000,
          "offsetgroup": "2",
          "type": "bar",
-         "width": 100000000,
          "x": [
           0,
           1,
@@ -8983,6 +9136,20 @@
          ]
         },
         {
+         "base": [
+          0,
+          0,
+          6,
+          5,
+          3,
+          4,
+          2,
+          1,
+          1,
+          0,
+          0,
+          0
+         ],
          "hovertemplate": "%{y}<extra></extra>",
          "legendgroup": "Disruptive",
          "legendgrouptitle": {
@@ -8996,10 +9163,8 @@
           }
          },
          "name": "Duration: 6-10",
-         "offset": 1000000000,
          "offsetgroup": "2",
          "type": "bar",
-         "width": 100000000,
          "x": [
           0,
           1,
@@ -9030,6 +9195,20 @@
          ]
         },
         {
+         "base": [
+          0,
+          1,
+          10,
+          11,
+          4,
+          4,
+          2,
+          1,
+          1,
+          0,
+          1,
+          0
+         ],
          "hovertemplate": "%{y}<extra></extra>",
          "legendgroup": "Disruptive",
          "legendgrouptitle": {
@@ -9043,10 +9222,8 @@
           }
          },
          "name": "Duration: <5",
-         "offset": 1000000000,
          "offsetgroup": "2",
          "type": "bar",
-         "width": 100000000,
          "x": [
           0,
           1,
@@ -9078,7 +9255,7 @@
         }
        ],
        "layout": {
-        "barmode": "relative",
+        "barmode": "group",
         "font": {
          "size": 24
         },
@@ -9946,7 +10123,7 @@
     "    layout=go.Layout(\n",
     "        height=600,\n",
     "        width=1000,\n",
-    "        barmode=\"relative\",\n",
+    "        barmode=\"group\",\n",
     "        yaxis_showticklabels=False,\n",
     "        yaxis_showgrid=False,\n",
     "        yaxis_range=[0, df.groupby(axis=1, level=0).sum().max().max() * 1.5],\n",
@@ -10005,6 +10182,7 @@
     "# Add the traces\n",
     "for i, t in enumerate(colors):\n",
     "    print(i)\n",
+    "    base_offset = 0\n",
     "    for j, col in enumerate(df[t].columns):\n",
     "        # print(df[t])\n",
     "        if (df[t][col] == 0).all():\n",
@@ -10014,13 +10192,14 @@
     "        fig.add_trace(go.Bar(\n",
     "            x=df.index,\n",
     "            y=df[t][col],\n",
+    "            base=base_offset,\n",
     "            # Set the right yaxis depending on the selected product (from enumerate)\n",
     "            # yaxis=f\"y{i + 1}\",\n",
     "            # Offset the bar trace, offset needs to match the width\n",
     "            # The values here are in milliseconds, 1billion ms is ~1/3 month\n",
     "            offsetgroup=str(i),\n",
-    "            offset=(i - 1) * 1000000000,\n",
-    "            width=100000000,\n",
+    "            #offset=(i - 1) * 1,\n",
+    "            #width=1,\n",
     "            legendgroup=t,\n",
     "            legendgrouptitle_text=t,\n",
     "            name=col,\n",
@@ -10029,14 +10208,15 @@
     "            hovertemplate=\"%{y}<extra></extra>\"\n",
     "                            )\n",
     "                    )\n",
-    "\n",
+    "        \n",
+    "        base_offset += df[t][col]\n",
     "fig.show()\n",
     "print(df.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -10283,7 +10463,7 @@
        "2019-07-05             0.0           0.0            0.0          0.0  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
